[BugFix] Fix the join condition resolving bug introduced by IN subquery impl
Signed-off-by: Lantao Jin <ltjin@amazon.com>